add DS_Store to .gitignore