@@ -3,18 +3,17 @@ package com.softserve.service.impl;
 import com.softserve.dto.TeacherDTO;
 import com.softserve.dto.TeacherForUpdateDTO;
 import com.softserve.dto.TeacherImportDTO;
+import com.softserve.dto.UserDataDTO;
 import com.softserve.dto.enums.ImportSaveStatus;
 import com.softserve.entity.Department;
 import com.softserve.entity.Teacher;
 import com.softserve.entity.User;
 import com.softserve.entity.enums.Role;
 import com.softserve.exception.EntityNotFoundException;
-import com.softserve.exception.FieldAlreadyExistsException;
 import com.softserve.exception.FieldNullException;
 import com.softserve.mapper.TeacherMapper;
 import com.softserve.repository.DepartmentRepository;
 import com.softserve.repository.TeacherRepository;
-import com.softserve.service.DepartmentService;
 import com.softserve.service.TeacherService;
 import com.softserve.service.UserService;
 import com.softserve.util.CsvFileParser;
@@ -29,182 +28,116 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-@Transactional
 @Service
+@Transactional
 @Slf4j
 @RequiredArgsConstructor
 public class TeacherServiceImpl implements TeacherService {
 
     private final TeacherRepository teacherRepository;
     private final UserService userService;
-    private final DepartmentService departmentService;
-    private final TeacherMapper teacherMapper;
     private final DepartmentRepository departmentRepository;
+    private final TeacherMapper teacherMapper;
 
-
-    /**
-     * {@inheritDoc}
-     */
     @Override
     @Transactional(readOnly = true)
     @Cacheable(value = "teachers", key = "#id")
-    public Teacher getById(Long id) {
-        log.info("Enter into getById of TeacherServiceImpl with id {}", id);
-        return teacherRepository.findById(id).orElseThrow(
-                () -> new EntityNotFoundException(Teacher.class, "id", id.toString()));
+    public TeacherDTO getById(Long id) {
+        log.info("Getting teacher by id: {}", id);
+        Teacher teacher = findTeacherById(id);
+        return teacherMapper.teacherToTeacherDTO(teacher);
     }
 
-    /**
-     * {@inheritDoc}
-     */
     @Override
     @Transactional(readOnly = true)
     @Cacheable(value = "teachersList")
-    public List<Teacher> getAll() {
-        log.info("In getAll()");
-        return teacherRepository.getAll();
+    public List<TeacherDTO> getAll() {
+        log.info("Getting all teachers");
+        List<Teacher> teachers = teacherRepository.getAll();
+        return teacherMapper.teachersToTeacherDTOs(teachers);
     }
 
-    /**
-     * {@inheritDoc}
-     */
     @Override
     @CacheEvict(value = {"teachers", "teachersList"}, allEntries = true)
-    public Teacher save(Teacher teacher) {
-        log.info("Enter into save method with entity:{}", teacher);
-        return teacherRepository.save(teacher);
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    public Teacher save(TeacherDTO teacherDTO) {
-        log.info("Enter into save method with dto:{}", teacherDTO);
+    public TeacherDTO save(TeacherDTO teacherDTO) {
+        log.info("Saving teacher: {}", teacherDTO);
         Teacher teacher = teacherMapper.teacherDTOToTeacher(teacherDTO);
-        if (isEmailNullOrEmpty(teacherDTO.getEmail())) {
-            return save(teacher);
+
+        if (!isEmailNullOrEmpty(teacherDTO.getEmail())) {
+            teacher = registerTeacher(teacher, teacherDTO.getEmail());
         }
-        return save(registerTeacher(teacher, teacherDTO.getEmail()));
+
+        Teacher saved = teacherRepository.save(teacher);
+        return teacherMapper.teacherToTeacherDTO(saved);
     }
 
-    /**
-     * {@inheritDoc}
-     */
     @Override
-    public Teacher update(TeacherForUpdateDTO teacherForUpdateDTO) {
-        log.info("Enter into update method with dto:{}", teacherForUpdateDTO);
+    @CacheEvict(value = {"teachers", "teachersList"}, allEntries = true)
+    public TeacherForUpdateDTO update(TeacherForUpdateDTO teacherForUpdateDTO) {
+        log.info("Updating teacher: {}", teacherForUpdateDTO);
         Teacher teacher = teacherMapper.teacherForUpdateDTOToTeacher(teacherForUpdateDTO);
+
         if (isEmailNullOrEmpty(teacherForUpdateDTO.getEmail())) {
-            return update(teacher);
+            Teacher updated = teacherRepository.update(teacher);
+            return teacherMapper.teacherToTeacherForUpdateDTO(updated);
         }
-        Long userId = getById(teacherForUpdateDTO.getId()).getUserId();
+
+        Teacher existingTeacher = findTeacherById(teacherForUpdateDTO.getId());
+        Long userId = existingTeacher.getUserId();
+
         if (userId != null) {
             teacher.setUserId(userId);
             updateEmailInUserForTeacher(teacherForUpdateDTO.getEmail(), userId);
-            return update(teacher);
+        } else {
+            teacher = registerTeacher(teacher, teacherForUpdateDTO.getEmail());
         }
-        return update(registerTeacher(teacher, teacherForUpdateDTO.getEmail()));
+
+        Teacher updated = teacherRepository.update(teacher);
+        return teacherMapper.teacherToTeacherForUpdateDTO(updated);
     }
 
-    /**
-     * {@inheritDoc}
-     */
     @Override
-//    @CacheEvict(value = "teachers", key = "#teacher.id")
     @CacheEvict(value = {"teachers", "teachersList"}, allEntries = true)
-    public Teacher update(Teacher teacher) {
-        log.info("Enter into update method with entity:{}", teacher);
-        return teacherRepository.update(teacher);
-    }
+    public void deleteById(Long id) {
+        log.info("Deleting teacher by id: {}", id);
+        Teacher teacher = findTeacherById(id);
 
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-//    @CacheEvict(value = "teachers", key = "#teacher.id")
-    @CacheEvict(value = {"teachers", "teachersList"}, allEntries = true)
-    public Teacher delete(Teacher teacher) {
-        log.info("Enter into delete method with entity:{}", teacher);
         if (teacher.getUserId() != null) {
             User user = userService.getById(teacher.getUserId());
             user.setRole(Role.ROLE_USER);
             userService.update(user);
         }
-        return teacherRepository.delete(teacher);
+
+        teacherRepository.delete(teacher);
     }
 
-    /**
-     * {@inheritDoc}
-     */
     @Override
-    public List<Teacher> getDisabled() {
-        log.info("Enter into getAll of getDisabled");
-        return teacherRepository.getDisabled();
+    @Transactional(readOnly = true)
+    public List<TeacherDTO> getDisabled() {
+        log.info("Getting disabled teachers");
+        List<Teacher> teachers = teacherRepository.getDisabled();
+        return teacherMapper.teachersToTeacherDTOs(teachers);
     }
 
-    /**
-     * {@inheritDoc}
-     */
     @Override
-    public Teacher findByUserId(Long userId) {
-        log.info("Enter into getByUserId with userId {}", userId);
-        if (userId == null) {
-            throw new FieldNullException(Teacher.class, "userId");
-        }
-        return teacherRepository.findByUserId(userId).orElseThrow(
-                () -> new EntityNotFoundException(Teacher.class, "userId", String.valueOf(userId)));
+    @Transactional(readOnly = true)
+    public List<TeacherDTO> getAllTeacherWithoutUser() {
+        log.info("Getting all teachers without user");
+        List<Teacher> teachers = teacherRepository.getAllTeacherWithoutUser();
+        return teacherMapper.teachersToTeacherDTOs(teachers);
     }
 
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    public List<Teacher> getAllTeacherWithoutUser() {
-        log.info("Enter into getAllTeacherWithoutUser of TeacherServiceImpl");
-        return teacherRepository.getAllTeacherWithoutUser();
-    }
-
-    private Teacher registerTeacher(Teacher teacher, String email) {
-        log.info("Enter into registerTeacher method with teacher {} and email:{}", teacher, email);
-        User registeredUserForTeacher = userService.automaticRegistration(email, Role.ROLE_TEACHER);
-        teacher.setUserId(registeredUserForTeacher.getId());
-        return teacher;
-    }
-
-    private void updateEmailInUserForTeacher(String email, long userId) {
-        log.info("Enter into updateEmailInUserForTeacher method with email {} and userId:{}", email, userId);
-        User userForTeacher = userService.getById(userId);
-        userForTeacher.setEmail(email);
-        userService.update(userForTeacher);
-    }
-
-    private boolean isEmailNullOrEmpty(String email) {
-        return email == null || email.isEmpty();
-    }
-
-    /**
-     * {@inheritDoc}
-     * Each line of the file should consist of five fields, separated by commas without spaceBar.
-     * First line of the file is a header.
-     * All subsequent lines contain data about teachers.
-     * <p>
-     * name,surname,patronymic,position,email
-     * Test1,Test1,Test1,test1,test1@gmail.com
-     * Test2,Test2,Test2,test2,test2@gmail.com
-     * etc.
-     */
     @Override
     public List<TeacherImportDTO> saveFromFile(MultipartFile file, Long departmentId) {
-        log.info("Enter into saveFromFile of TeacherServiceImpl with departmentId {}", departmentId);
-
+        log.info("Importing teachers from file for department: {}", departmentId);
         List<TeacherImportDTO> teachers = CsvFileParser.getTeachersFromFile(file);
-
-        return teachers.stream().map(teacher -> saveTeacher(departmentId, teacher)).collect(Collectors.toList());
+        return teachers.stream()
+                .map(teacher -> saveTeacher(departmentId, teacher))
+                .toList();
     }
 
+    @Override
     public TeacherImportDTO saveTeacher(Long departmentId, TeacherImportDTO teacher) {
         try {
             Optional<User> userOptional = userService.findSocialUser(teacher.getEmail());
@@ -228,24 +161,63 @@ public class TeacherServiceImpl implements TeacherService {
             teacher.setImportSaveStatus(ImportSaveStatus.VALIDATION_ERROR);
             log.error("Error occurred while saving teacher with email {}", teacher.getEmail(), e);
             return teacher;
-
         }
     }
 
-    /**
-     * Assigns existing user to provided new teacher.
-     *
-     * @param teacher      the teacher from file
-     * @param userOptional the user from database
-     * @param newTeacher   the teacher which we will save to the repository
-     * @param department   department which provided from server
-     * @return the saved teacher or {code null} if given optional does not contain user
-     */
+    @Override
+    @CacheEvict(value = {"teachers", "teachersList"}, allEntries = true)
+    public void removeUserFromTeacher(Long userId) {
+        log.info("Removing user association from teacher by userId: {}", userId);
+        if (userId == null) {
+            throw new FieldNullException(Teacher.class, "userId");
+        }
+        Teacher teacher = teacherRepository.findByUserId(userId)
+                .orElseThrow(() -> new EntityNotFoundException(Teacher.class, "userId", String.valueOf(userId)));
+        teacher.setUserId(null);
+        teacherRepository.update(teacher);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public UserDataDTO getUserDataByUserId(Long userId) {
+        log.info("Getting user data for teacher by userId: {}", userId);
+        if (userId == null) {
+            return null;
+        }
+        return teacherRepository.findByUserId(userId)
+                .map(teacherMapper::teacherToUserDataDTO)
+                .orElse(null);
+    }
+
+    // ==================== Private Helper Methods ====================
+
+    private Teacher findTeacherById(Long id) {
+        return teacherRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException(Teacher.class, "id", id.toString()));
+    }
+
+    private Teacher registerTeacher(Teacher teacher, String email) {
+        log.debug("Registering teacher with email: {}", email);
+        User registeredUser = userService.automaticRegistration(email, Role.ROLE_TEACHER);
+        teacher.setUserId(registeredUser.getId());
+        return teacher;
+    }
+
+    private void updateEmailInUserForTeacher(String email, Long userId) {
+        log.debug("Updating email for user: {}", userId);
+        User user = userService.getById(userId);
+        user.setEmail(email);
+        userService.update(user);
+    }
+
+    private boolean isEmailNullOrEmpty(String email) {
+        return email == null || email.isEmpty();
+    }
+
     private TeacherImportDTO assignUserToNewTeacher(TeacherImportDTO teacher, Optional<User> userOptional,
                                                     Teacher newTeacher, Department department) {
-        log.debug("Enter to method if email EXIST and teacher DONT EXIST");
+        log.debug("Assigning existing user to new teacher");
         if (userOptional.isPresent()) {
-
             newTeacher.setUserId(userOptional.get().getId());
             newTeacher.setDepartment(department);
             teacherRepository.save(newTeacher);
@@ -257,28 +229,19 @@ public class TeacherServiceImpl implements TeacherService {
         return null;
     }
 
-    /**
-     * Registers provided user and update existed teacher.
-     *
-     * @param teacher         the teacher from file
-     * @param teacherFromBase the teacher from dataBase
-     * @param department      department which provided from server
-     * @return the saved teacher or {@code null} if given optional does not contain teacher
-     */
-    private TeacherImportDTO registerUserAndUpdateTeacher(TeacherImportDTO teacher, Optional<Teacher> teacherFromBase, Department department) {
-        log.debug("Enter to method if email DONT EXIST and teacher EXIST");
+    private TeacherImportDTO registerUserAndUpdateTeacher(TeacherImportDTO teacher, Optional<Teacher> teacherFromBase,
+                                                          Department department) {
+        log.debug("Registering user and updating existing teacher");
         if (teacherFromBase.isPresent()) {
+            Teacher existingTeacher = findTeacherById(teacherFromBase.get().getId());
+            Teacher registeredTeacher = registerTeacher(existingTeacher, teacher.getEmail());
 
-            Teacher ourTeacherFromBase = getById(teacherFromBase.get().getId());
-            Teacher registeredTeacher1 = registerTeacher(ourTeacherFromBase, teacher.getEmail());
-            if (ourTeacherFromBase.getDepartment() == null) {
-                registeredTeacher1.setDepartment(department);
+            if (existingTeacher.getDepartment() == null) {
+                registeredTeacher.setDepartment(department);
             }
-            if (ourTeacherFromBase.getUserId() == null) {
-                registeredTeacher1.setUserId(registeredTeacher1.getUserId());
-            }
-            teacherRepository.update(registeredTeacher1);
-            TeacherImportDTO savedTeacher = teacherMapper.teacherToTeacherImportDTO(registeredTeacher1);
+
+            teacherRepository.update(registeredTeacher);
+            TeacherImportDTO savedTeacher = teacherMapper.teacherToTeacherImportDTO(registeredTeacher);
             savedTeacher.setEmail(teacher.getEmail());
             savedTeacher.setImportSaveStatus(ImportSaveStatus.ALREADY_EXIST);
             return savedTeacher;
@@ -286,17 +249,9 @@ public class TeacherServiceImpl implements TeacherService {
         return null;
     }
 
-    /**
-     * Registers provided user and save provided teacher.
-     *
-     * @param teacher    the teacher from file
-     * @param newTeacher the teacher which we will save to database
-     * @param department department which provided from server
-     * @return saved teacher
-     */
-    private TeacherImportDTO registerAndSaveNewTeacher(TeacherImportDTO teacher, Teacher newTeacher, Department department) {
-        log.debug("Enter to method if email and teacher DONT EXIST");
-
+    private TeacherImportDTO registerAndSaveNewTeacher(TeacherImportDTO teacher, Teacher newTeacher,
+                                                       Department department) {
+        log.debug("Registering and saving new teacher");
         Teacher registeredTeacher = registerTeacher(newTeacher, teacher.getEmail());
         registeredTeacher.setDepartment(department);
         teacherRepository.save(registeredTeacher);
@@ -306,36 +261,27 @@ public class TeacherServiceImpl implements TeacherService {
         return savedTeacher;
     }
 
-    /**
-     * Registers provided user and save provided teacher.
-     *
-     * @param teacher         the teacher from file
-     * @param teacherFromBase the teacher from dataBase
-     * @param userOptional    the user from database
-     * @param department      the department which provided from server
-     * @return the existed teacher of {@code null} if given optional does not contain user
-     */
     private TeacherImportDTO checkForEmptyFieldsOfExistingTeacher(TeacherImportDTO teacher, Optional<User> userOptional,
                                                                   Optional<Teacher> teacherFromBase, Department department) {
-        log.debug("Enter to method if email EXIST and teacher EXIST");
+        log.debug("Checking existing teacher for empty fields");
         if (userOptional.isPresent() && teacherFromBase.isPresent()) {
+            Teacher existingTeacher = findTeacherById(teacherFromBase.get().getId());
 
-            Teacher ourTeacherFromBase = getById(teacherFromBase.get().getId());
-            if (ourTeacherFromBase.getDepartment() == null || ourTeacherFromBase.getUserId() == null) {
-                if (ourTeacherFromBase.getDepartment() == null) {
-                    ourTeacherFromBase.setDepartment(department);
+            if (existingTeacher.getDepartment() == null || existingTeacher.getUserId() == null) {
+                if (existingTeacher.getDepartment() == null) {
+                    existingTeacher.setDepartment(department);
                 }
-                if (ourTeacherFromBase.getUserId() == null) {
-                    ourTeacherFromBase.setUserId(userOptional.get().getId());
+                if (existingTeacher.getUserId() == null) {
+                    existingTeacher.setUserId(userOptional.get().getId());
                 }
-                teacherRepository.update(ourTeacherFromBase);
+                teacherRepository.update(existingTeacher);
             }
-            TeacherImportDTO existedTeacher = teacherMapper.teacherToTeacherImportDTO(ourTeacherFromBase);
+
+            TeacherImportDTO existedTeacher = teacherMapper.teacherToTeacherImportDTO(existingTeacher);
             existedTeacher.setImportSaveStatus(ImportSaveStatus.ALREADY_EXIST);
-            log.error("Teacher with current email exist ", new FieldAlreadyExistsException(Teacher.class, "email", teacher.getEmail()));
+            log.warn("Teacher with email {} already exists", teacher.getEmail());
             return existedTeacher;
         }
         return null;
     }
-
 }
